<resources>
    <string name="app_name">Banco del Peru</string>

    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_deposit">Deposit</string>
    <string name="action_withdraw">Withdraw</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_transactions">Transactions</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_withdrawal">Withdrawal</string>
    <string name="title_activity_deposit">Deposit</string>
    <string name="title_activity_transfer">Transfer</string>
    <string name="title_activity_login_screen">Login</string>
    <string name="title_activity_transactions">Transactions</string>
</resources>
